devOps fixes for the stack - working on the backend arc tomorrow

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,12 +8,12 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     image: king-zecole/paybybank-microservice
+    env_file:
+      - .env
     ports:
-      - "8080:8080"
-    environment:
-      - PORT=8080
+      - "${PORT}:${PORT}"
     healthcheck:
-      test: ["CMD", "wget", "-q", "--spider", "http://localhost:8080/health"]
+      test: ["CMD", "wget", "-q", "--spider", "http://localhost:${PORT}/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -23,53 +23,21 @@ services:
   app:
     build:
       context: ./frontend
-      dockerfile: Dockerfile.clean
+      dockerfile: Dockerfile
     image: king-zecole/paybybank-app
     ports:
-      - "3000:3000"
-    environment:
-      - NODE_ENV=production
-      - NEXT_TELEMETRY_DISABLED=1
-      - NEXT_PUBLIC_API_URL=http://backend:8080
+      - "${APP_PORT}:${APP_PORT}"
     depends_on:
       backend:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000"]
+      test: ["CMD", "curl", "-f", "http://localhost:${APP_PORT}"]
       interval: 30s
       timeout: 10s
       retries: 3
       start_period: 40s
     restart: unless-stopped
 
-  # Optional: Nginx reverse proxy for production
-  nginx:
-    image: nginx:alpine
-    ports:
-      - "80:80"
-    volumes:
-      - ./frontend/nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-      - app
-      - backend
-    restart: unless-stopped
-    profiles:
-      - production
-
-  # Optional: Redis for session caching (production)
-  redis:
-    image: redis:7-alpine
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
-    restart: unless-stopped
-    profiles:
-      - production
-
-volumes:
-  redis_data:
-
 networks:
   default:
-    name: bankverify-network
+    name: pay-by-bank-network
